# data-desktop

./: .gitignore  README.md  config.example.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
.github/workflows/: build-client.yml  build-server.yml
src/: App.tsx  index.css  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: e2e.rs
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  lib.rs  main.rs  ws_client.rs  ws_frame.rs
src-tauri/src/core/: access_token.rs  ck.rs  ck_alive.rs  history.rs  mod.rs  order.rs  rules.rs  sysinfo.rs
src-tauri/src/core/notify/: channel.rs  event.rs  mod.rs  template.rs
src-tauri/tests/fixtures/: access_token_vector.txt
src/components/: ConnectionBanner.tsx  Disclaimer.tsx  ErrorBoundary.tsx  OrderTable.tsx  Sidebar.tsx  ToastBridge.tsx
src/lib/: events.ts  parseItemUrl.ts  ruleDedup.ts  tauri.ts  types.ts
src/store/: useStore.ts
src/views/: Credentials.tsx  Dashboard.tsx  Orders.tsx  RuleFormModal.tsx  RulesTable.tsx  Settings.tsx
