[package]
name = "paipai-client"
version = "0.1.0"
description = "拍拍商品数据研究助手 — 客户端(Tauri)"
edition = "2021"

[lib]
name = "paipai_client_lib"
path = "src/lib.rs"

[[bin]]
name = "paipai-client"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
anyhow = "1"
tracing = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
# 通知渠道加签(钉钉/飞书自定义机器人):HMAC-SHA256 + base64 + URL 编码。
hmac = "0.12"
base64 = "0.22"
urlencoding = "2"
# 访问 Token 解密(AES-256-GCM):把 `ak-` 串还原为 {url,tok,uid,exp}。
aes-gcm = "0.10"
rand = "0.8"

# Tauri 2 + plugins (added for the shell; core logic does not depend on them)
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tungstenite = "0.24"
rustls = { version = "0.23", features = ["aws_lc_rs"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
