[package]
name = "paipai-client"
version = "0.1.0"
description = "商品数据研究助手 — 客户端(Tauri)"
edition = "2021"

[lib]
name = "paipai_client_lib"
path = "src/lib.rs"

[[bin]]
name = "paipai-client"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
# preserve_order:body 必须按插入顺序序列化(对齐 h5st-probe)。JD 风控会看 body
# 的字段顺序特征,默认的字母排序 body 会被判异常(表现为下单"提交过快")。
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
wreq = "5.3"
wreq-util = "2"
futures = "0.3"
anyhow = "1"
tracing = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
# 通知渠道加签(钉钉/飞书自定义机器人):HMAC-SHA256 + base64 + URL 编码。
hmac = "0.12"
base64 = "0.22"
urlencoding = "2"
aes-gcm = "0.10"
rand = "0.8"
# h5st-probe 作为库直接引用:下单全套(造body/本地headless签名/wreq发请求)用
# probe 已实测能下单的同一份代码,不再在客户端维护副本(避免逐字段漂移)。
# git 依赖(私有仓):本机用你的 git 凭据拉,CI 用 PRIVATE_REPO_TOKEN(见
# build-client.yml 的 insteadOf 改写)。本机要改 probe 调试时可临时换回
# `{ path = "../../../h5st-probe" }`。
h5st-probe = { git = "https://github.com/darkmice/h5st-probe.git", branch = "main" }
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime", "bytes"] }

# Tauri 2 + plugins (added for the shell; core logic does not depend on them)
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tungstenite = "0.24"
rustls = { version = "0.23", features = ["aws_lc_rs"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
